trying to fix img overflow

--- a/src/Style.css
+++ b/src/Style.css
@@ -20,6 +20,8 @@
 }
 
 img {
+    width: auto;
+    height: auto;
     max-width: 100%;
     max-height: 100%; 
 }
@@ -124,3 +126,4 @@ p {
 #ContentContainer {
     width: 100%;
 }
+
